@@ -1,5 +1,5 @@
 #
-# $Header: /cvsroot/gtk2-perl/gtk2-perl-xs/Gnome2/Gnome2.pm,v 1.9 2003/07/18 16:57:02 muppetman Exp $
+# $Header: /cvsroot/gtk2-perl/gtk2-perl-xs/Gnome2/Gnome2.pm,v 1.10 2003/07/25 15:05:10 muppetman Exp $
 #
 
 package Gnome2;
@@ -32,7 +32,7 @@ our @EXPORT = qw(
 	
 );
 
-our $VERSION = '0.28';
+our $VERSION = '0.30';
 
 sub dl_load_flags { 0x01 }
 
@@ -77,7 +77,7 @@ FIXME we have no other documentation, but we probably need it.
 
 =head1 SEE ALSO
 
-perl(1), Glib(1), Gtk2(1).
+perl(1), Glib(3pm), Gtk2(3pm).
 
 =head1 AUTHOR
 
